库/XCGUI/xcgui.h

typedef  __int64  vint;
typedef  int      vint;
typedef void* HXCGUI;       
enum zorder_  
{
	zorder_top,    
	zorder_bottom, 
	zorder_before, 
	zorder_after,  
};
enum adjustLayout_  
{
	adjustLayout_no = 0x00,  
	adjustLayout_all = 0x01,  
	adjustLayout_self = 0x02,  
};
struct borderSize_  
{
	int  leftSize;   
	int  topSize;    
	int  rightSize;  
	int  bottomSize; 
};
struct  position_
{
	int  iRow;    
	int  iColumn; 
};
struct edit_style_info_
{
	USHORT   type;              
	USHORT   nRef;              
	HXCGUI   hFont_image_obj;   
	COLORREF color;             
	BOOL     bColor;            
};
struct xc_event
{
	xc_event(int regType, const char* pFunName) {
		m_pBind = 0;
		m_pFunC = 0;
		m_name[0] = 0;
		m_regType = regType;
		if (pFunName) strcpy_s(m_name, pFunName);
	}
	int            m_regType;     
	bind_event_cpp* m_pBind;     
	bind_event_c* m_pFunC;     
	char           m_name[MAX_PATH]; 
	BOOL Equal(xc_event* pEvent) {
		if (m_pBind && pEvent->m_pBind)
			return (m_pBind->Equal(pEvent->m_pBind));
		if (m_pFunC && pEvent->m_pFunC)
			return (m_pFunC->Equal(pEvent->m_pFunC));
		return FALSE;
	}
	BOOL Equal(void* pFunc) {
		if (m_pFunC) {
			if (m_pFunC->GetFunc() == pFunc)
				return TRUE;
		}
		return FALSE;
	}
	int HandleEvent(HELE hEle, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL* pbHandled)
	{
		if (m_pBind)
			return m_pBind->HandleEvent(hEle, m_regType, nEvent, wParam, lParam, pbHandled);
		if (m_pFunC)
			return m_pFunC->HandleEvent(hEle, m_regType, nEvent, wParam, lParam, pbHandled);
		MessageBoxA(NULL, "HandleEvent()", "error", 0);
		return 0;
	}
	int HandleEventWnd(HWINDOW hWindow, UINT nEvent, WPARAM wParam, LPARAM lParam, BOOL* pbHandled)
	{
		if (m_pBind)
			return m_pBind->HandleEventWnd(hWindow, m_regType, nEvent, wParam, lParam, pbHandled);
		if (m_pFunC)
			return m_pFunC->HandleEventWnd(hWindow, m_regType, nEvent, wParam, lParam, pbHandled);
		MessageBoxA(NULL, "HandleEventWnd()", "error", 0);
		return 0;
	}
	char* GetFunName() { return m_name; }
	virtual void Release() {
		if (m_pBind) delete m_pBind;
		if (m_pFunC) delete m_pFunC;
		delete this;
	}
};
XC_API BOOL WINAPI _XEle_RegEvent(HELE hEle, UINT nEvent, xc_event* pEvent);
XC_API BOOL WINAPI _XEle_RemoveEvent(HELE hEle, UINT nEvent, xc_event* pEvent);
XC_API HELE WINAPI XEle_Create(int x, int y, int cx, int cy, HXCGUI hParent=NULL);
XC_API BOOL WINAPI XEle_RegEventC(HELE hEle, int nEvent, void* pFun);
XC_API BOOL WINAPI XEle_RegEventC1(HELE hEle, int nEvent, void* pFun);
XC_API BOOL WINAPI XEle_RemoveEventC(HELE hEle, int nEvent, void* pFun);
XC_API int WINAPI XEle_SendEvent(HELE hEle, int nEvent, WPARAM wParam, LPARAM lParam);
XC_API BOOL WINAPI XEle_PostEvent(HELE hEle, int nEvent, WPARAM wParam, LPARAM lParam);
XC_API void WINAPI XEle_GetRect(HELE hEle, RECT* pRect);
XC_API void WINAPI XEle_GetRectLogic(HELE hEle, RECT* pRect);
XC_API void WINAPI XEle_GetClientRect(HELE hEle, RECT* pRect);
XC_API void WINAPI XEle_SetWidth(HELE hEle, int nWidth);
XC_API void WINAPI XEle_SetHeight(HELE hEle, int nHeight);
XC_API int WINAPI XEle_GetWidth(HELE hEle);
XC_API int WINAPI XEle_GetHeight(HELE hEle);
XC_API void WINAPI XEle_RectWndClientToEleClient(HELE hEle, RECT* pRect);
XC_API void WINAPI XEle_PointWndClientToEleClient(HELE hEle, POINT* pPt);
XC_API void WINAPI XEle_RectClientToWndClient(HELE hEle, RECT* pRect);
XC_API void WINAPI XEle_PointClientToWndClient(HELE hEle, POINT* pPt);
XC_API void WINAPI XEle_GetWndClientRect(HELE hEle, RECT* pRect);
XC_API HCURSOR WINAPI XEle_GetCursor(HELE hEle);
XC_API void WINAPI XEle_SetCursor(HELE hEle, HCURSOR hCursor);
XC_API BOOL WINAPI XEle_AddChild(HELE hEle, HXCGUI hChild);
XC_API BOOL WINAPI XEle_InsertChild(HELE hEle, HXCGUI hChild, int index);
XC_API int WINAPI XEle_SetRect(HELE hEle, RECT* pRect, BOOL bRedraw=FALSE, int nFlags=adjustLayout_all, UINT nAdjustNo=0);
XC_API int WINAPI XEle_SetRectEx(HELE hEle, int x, int y, int cx, int cy, BOOL bRedraw=FALSE, int nFlags=adjustLayout_all, UINT nAdjustNo=0);
XC_API int WINAPI XEle_SetRectLogic(HELE hEle, RECT* pRect, BOOL bRedraw=FALSE, int nFlags=adjustLayout_all, UINT nAdjustNo=0);
XC_API BOOL WINAPI XEle_IsDrawFocus(HELE hEle);
XC_API BOOL WINAPI XEle_IsEnable(HELE hEle);
XC_API BOOL WINAPI XEle_IsEnableFocus(HELE hEle);
XC_API BOOL WINAPI XEle_IsMouseThrough(HELE hEle);
XC_API HELE WINAPI XEle_HitChildEle(HELE hEle, POINT* pPt);
XC_API BOOL WINAPI XEle_IsBkTransparent(HELE hEle);
XC_API BOOL WINAPI XEle_IsEnableEvent_XE_PAINT_END(HELE hEle);
XC_API BOOL WINAPI XEle_IsKeyTab(HELE hEle);
XC_API BOOL WINAPI XEle_IsSwitchFocus(HELE hEle);
XC_API BOOL WINAPI XEle_IsEnable_XE_MOUSEWHEEL(HELE hEle);
XC_API BOOL WINAPI XEle_IsChildEle(HELE hEle, HELE hChildEle);
XC_API BOOL WINAPI XEle_IsEnableCanvas(HELE hEle);
XC_API BOOL WINAPI XEle_IsFocus(HELE hEle);
XC_API BOOL WINAPI XEle_IsFocusEx(HELE hEle);
XC_API void WINAPI XEle_Enable(HELE hEle, BOOL bEnable);
XC_API void WINAPI XEle_EnableFocus(HELE hEle, BOOL bEnable);
XC_API void WINAPI XEle_EnableDrawFocus(HELE hEle, BOOL bEnable);
XC_API void WINAPI XEle_EnableDrawBorder(HELE hEle, BOOL bEnable);
XC_API void WINAPI XEle_EnableCanvas(HELE hEle, BOOL bEnable);
XC_API void WINAPI XEle_EnableEvent_XE_PAINT_END(HELE hEle, BOOL bEnable);
XC_API void WINAPI XEle_EnableBkTransparent(HELE hEle, BOOL bEnable);
XC_API void WINAPI XEle_EnableMouseThrough(HELE hEle, BOOL bEnable);
XC_API void WINAPI XEle_EnableKeyTab(HELE hEle, BOOL bEnable);
XC_API void WINAPI XEle_EnableSwitchFocus(HELE hEle, BOOL bEnable);
XC_API void WINAPI XEle_EnableEvent_XE_MOUSEWHEEL(HELE hEle, BOOL bEnable);
XC_API void WINAPI XEle_Remove(HELE hEle);
XC_API BOOL WINAPI XEle_SetZOrder(HELE hEle, int index);
XC_API BOOL WINAPI XEle_SetZOrderEx(HELE hEle, HELE hDestEle, zorder_ nType);
XC_API int WINAPI XEle_GetZOrder(HELE hEle);
XC_API BOOL WINAPI XEle_EnableTopmost(HELE hEle, BOOL bTopmost);
XC_API void WINAPI XEle_Redraw(HELE hEle, BOOL bImmediate=FALSE);
XC_API void WINAPI XEle_RedrawRect(HELE hEle, RECT* pRect, BOOL bImmediate=FALSE);
XC_API int WINAPI XEle_GetChildCount(HELE hEle);
XC_API HXCGUI WINAPI XEle_GetChildByIndex(HELE hEle, int index);
XC_API HXCGUI WINAPI XEle_GetChildByID(HELE hEle, int nID);
XC_API void WINAPI XEle_SetBorderSize(HELE hEle, int left, int top, int right, int bottom);
XC_API void WINAPI XEle_GetBorderSize(HELE hEle, borderSize_* pBorder);
XC_API void WINAPI XEle_SetPadding(HELE hEle, int left, int top, int right, int bottom);
XC_API void WINAPI XEle_GetPadding(HELE hEle, paddingSize_* pPadding);
XC_API void WINAPI XEle_SetDragBorder(HELE hEle, int nFlags);
XC_API void WINAPI XEle_SetDragBorderBindEle(HELE hEle, int nFlags, HELE hBindEle, int nSpace);
XC_API void WINAPI XEle_SetMinSize(HELE hEle, int nWidth, int nHeight);
XC_API void WINAPI XEle_SetMaxSize(HELE hEle, int nWidth, int nHeight);
XC_API void WINAPI XEle_SetLockScroll(HELE hEle, BOOL bHorizon, BOOL bVertical);
XC_API void WINAPI XEle_SetTextColor(HELE hEle, COLORREF color);
XC_API COLORREF WINAPI XEle_GetTextColor(HELE hEle);
XC_API COLORREF WINAPI XEle_GetTextColorEx(HELE hEle);
XC_API void WINAPI XEle_SetFocusBorderColor(HELE hEle, COLORREF color);
XC_API COLORREF WINAPI XEle_GetFocusBorderColor(HELE hEle);
XC_API void WINAPI XEle_SetFont(HELE hEle, HFONTX hFontx);
XC_API HFONTX WINAPI XEle_GetFont(HELE hEle);
XC_API HFONTX WINAPI XEle_GetFontEx(HELE hEle);
XC_API void WINAPI XEle_SetAlpha(HELE hEle, BYTE alpha);
XC_API BYTE WINAPI XEle_GetAlpha(HELE hEle);
XC_API void WINAPI XEle_Destroy(HELE hEle);
XC_API void WINAPI XEle_AddBkBorder(HELE hEle, int nState, COLORREF color, int width);
XC_API void WINAPI XEle_AddBkFill(HELE hEle, int nState, COLORREF color);
XC_API void WINAPI XEle_AddBkImage(HELE hEle, int nState, HIMAGE hImage);
XC_API int WINAPI XEle_GetBkInfoCount(HELE hEle);
XC_API void WINAPI XEle_ClearBkInfo(HELE hEle);
XC_API void WINAPI XEle_SetUserData(HELE hEle, vint nData);
XC_API vint WINAPI XEle_GetUserData(HELE hEle);
XC_API void WINAPI XEle_GetContentSize(HELE hEle, BOOL bHorizon, int cx, int cy, SIZE* pSize);
XC_API void WINAPI XEle_SetCapture(HELE hEle, BOOL b);
XC_API int WINAPI XEdit_AddStyleEx(HELE hEle, const wchar_t* fontName, int fontSize, int fontStyle, COLORREF color, BOOL bColor);
XC_API BOOL WINAPI XEdit_GetStyleInfo(HELE hEle, int iStyle, edit_style_info_* info);
XC_API void WINAPI XEdit_SetCurStyle(HELE hEle, int iStyle);
XC_API void WINAPI XEdit_SetCaretColor(HELE hEle, COLORREF color);
XC_API void WINAPI XEdit_SetCaretWidth(HELE hEle, int nWidth);
XC_API void WINAPI XEdit_SetSelectBkColor(HELE hEle, COLORREF color);
XC_API void WINAPI XEdit_SetRowHeight(HELE hEle, int nHeight);
XC_API void WINAPI XEdit_SetRowHeightEx(HELE hEle, int iRow, int nHeight);
XC_API int WINAPI XEdit_GetCurPos(HELE hEle);
XC_API int WINAPI XEdit_GetCurRow(HELE hEle);
XC_API int WINAPI XEdit_GetCurCol(HELE hEle);
XC_API void WINAPI XEdit_GetPoint(HELE hEle, int iRow, int iCol, POINT* pOut);
XC_API BOOL WINAPI XEdit_AutoScroll(HELE hEle);
XC_API BOOL WINAPI XEdit_AutoScrollEx(HELE hEle, int iRow, int iCol);
XC_API BOOL WINAPI XEdit_SelectAll(HELE hEle);
XC_API BOOL WINAPI XEdit_CancelSelect(HELE hEle);
XC_API BOOL WINAPI XEdit_DeleteSelect(HELE hEle);
XC_API BOOL WINAPI XEdit_SetSelect(HELE hEle, int iStartRow, int iStartCol, int iEndRow, int iEndCol);
XC_API int WINAPI XEdit_GetSelectText(HELE hEle, wchar_t* pOut, int nOutLen);
XC_API BOOL WINAPI XEdit_GetSelectRange(HELE hEle, position_* pBegin, position_* pEnd);
XC_API void WINAPI XEdit_GetVisibleRowRange(HELE hEle, int* piStart, int* piEnd);
XC_API BOOL WINAPI XEdit_Delete(HELE hEle, int iStartRow, int iStartCol, int iEndRow, int iEndCol);
XC_API BOOL WINAPI XEdit_DeleteRow(HELE hEle, int iRow);
XC_API BOOL WINAPI XEdit_ClipboardCut(HELE hEle);
XC_API BOOL WINAPI XEdit_ClipboardCopy(HELE hEle);
XC_API BOOL WINAPI XEdit_ClipboardPaste(HELE hEle);
XC_API BOOL WINAPI XEdit_Undo(HELE hEle);
XC_API BOOL WINAPI XEdit_Redo(HELE hEle);
XC_API void WINAPI XEdit_AddChatBegin(HELE hEle, HIMAGE hImageAvatar, HIMAGE hImageBubble, int nFlag);
XC_API void WINAPI XEdit_AddChatEnd(HELE hEle);
XC_API void WINAPI XEdit_SetChatIndentation(HELE hEle, int nIndentation);