库/XCGUI/XCGUI.pas


function XEdit_AddStyleEx(hEle: HELE; fontName: PWideChar; fontSize: Integer; fontStyle: Integer; color: Integer; bColor: BOOL): Integer; stdcall; external XCGUI_DLL;

function XEdit_GetStyleInfo(hEle: HELE; iStyle: Integer; out info: Tedit_style_info_): BOOL; stdcall; external XCGUI_DLL;

procedure XEdit_SetCurStyle(hEle: HELE; iStyle: Integer); stdcall; external XCGUI_DLL;

procedure XEdit_SetCaretColor(hEle: HELE; color: Integer); stdcall; external XCGUI_DLL;

procedure XEdit_SetCaretWidth(hEle: HELE; nWidth: Integer); stdcall; external XCGUI_DLL;

procedure XEdit_SetSelectBkColor(hEle: HELE; color: Integer); stdcall; external XCGUI_DLL;

procedure XEdit_SetRowHeight(hEle: HELE; nHeight: Integer); stdcall; external XCGUI_DLL;

procedure XEdit_SetRowHeightEx(hEle: HELE; iRow: Integer; nHeight: Integer); stdcall; external XCGUI_DLL;

function XEdit_GetCurPos(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XEdit_GetCurRow(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XEdit_GetCurCol(hEle: HELE; iRow: Integer): Integer; stdcall; external XCGUI_DLL;

procedure XEdit_GetPoint(hEle: HELE; iRow: Integer; iCol: Integer; out pOut: TPoint); stdcall; external XCGUI_DLL;

function XEdit_AutoScroll(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEdit_AutoScrollEx(hEle: HELE; iRow: Integer; iCol: Integer): BOOL; stdcall; external XCGUI_DLL;

function XEdit_SelectAll(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEdit_CancelSelect(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEdit_DeleteSelect(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEdit_SetSelect(hEle: HELE; iStartRow: Integer; iStartCol: Integer; iEndRow: Integer; iEndCol: Integer): BOOL; stdcall; external XCGUI_DLL;

function XEdit_GetSelectText(hEle: HELE; out pOut: PWideChar; nOutLen: Integer): Integer; stdcall; external XCGUI_DLL;

function XEdit_GetSelectRange(hEle: HELE; out pBegin: Tposition_; out pEnd: Tposition_): BOOL; stdcall; external XCGUI_DLL;

procedure XEdit_GetVisibleRowRange(hEle: HELE; out piStart: Integer; out piEnd: Integer); stdcall; external XCGUI_DLL;

function XEdit_Delete(hEle: HELE; iStartRow: Integer; iStartCol: Integer; iEndRow: Integer; iEndCol: Integer): BOOL; stdcall; external XCGUI_DLL;

function XEdit_DeleteRow(hEle: HELE; iRow: Integer): BOOL; stdcall; external XCGUI_DLL;

function XEdit_ClipboardCut(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEdit_ClipboardCopy(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEdit_ClipboardPaste(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEdit_Undo(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEdit_Redo(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

procedure XEdit_AddChatBegin(hEle: HELE; hImageAvatar: HIMAGE; hImageBubble: HIMAGE; nFlag: Integer); stdcall; external XCGUI_DLL;

procedure XEdit_AddChatEnd(hEle: HELE); stdcall; external XCGUI_DLL;

procedure XEdit_SetChatIndentation(hEle: HELE; nIndentation: Integer); stdcall; external XCGUI_DLL;

function XEdit_CommentSelect(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEdit_IndentationSelect(hEle: HELE; bAdd: Integer): BOOL; stdcall; external XCGUI_DLL;

function XEle_Create(x: Integer; y: Integer; cx: Integer; cy: Integer; hParent: HXCGUI = 0): HELE; stdcall; external XCGUI_DLL;

function _XEle_RegEvent(hEle: HELE; nEvent: Integer; pEvent: Integer): BOOL; stdcall; external XCGUI_DLL;

function _XEle_RemoveEvent(hEle: HELE; nEvent: UINT; pEvent: Integer): BOOL; stdcall; external XCGUI_DLL;

function XEle_RegEventC(hEle: HELE; nEvent: Integer; pFun: vint): BOOL; stdcall; external XCGUI_DLL;

function XEle_RegEventC1(hEle: HELE; nEvent: Integer; pFun: vint): BOOL; stdcall; external XCGUI_DLL;

function XEle_RegEventC2(hEle: HELE; nEvent: Integer; pFun: vint): BOOL; stdcall; external XCGUI_DLL;

function XEle_RemoveEventC(hEle: HELE; nEvent: Integer; pFun: vint): BOOL; stdcall; external XCGUI_DLL;

function XEle_SendEvent(hEle: HELE; nEvent: Integer; wParam: WPARAM; lParam: LPARAM): Integer; stdcall; external XCGUI_DLL;

function XEle_PostEvent(hEle: HELE; nEvent: Integer; wParam: WPARAM; lParam: LPARAM): BOOL; stdcall; external XCGUI_DLL;

function XEle_IsShow(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEle_IsEnable(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEle_IsEnableFocus(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEle_IsDrawFocus(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEle_IsEnableEvent_XE_PAINT_END(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEle_IsMouseThrough(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEle_IsBkTransparent(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEle_IsKeyTab(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEle_IsSwitchFocus(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEle_IsEnable_XE_MOUSEWHEEL(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEle_IsChildEle(hEle: HELE; hChildEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEle_IsEnableCanvas(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEle_IsFocus(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

function XEle_IsFocusEx(hEle: HELE): BOOL; stdcall; external XCGUI_DLL;

procedure XEle_Enable(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XEle_EnableFocus(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XEle_EnableDrawFocus(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XEle_EnableDrawBorder(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XEle_EnableCanvas(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XEle_EnableBkTransparent(hEle: HELE; bEnable: BOOL = True); stdcall; external XCGUI_DLL;

procedure XEle_EnableMouseThrough(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XEle_EnableKeyTab(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XEle_EnableSwitchFocus(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XEle_EnableEvent_XE_PAINT_END(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

procedure XEle_EnableEvent_XE_MOUSEWHEEL(hEle: HELE; bEnable: BOOL); stdcall; external XCGUI_DLL;

function XEle_SetRect(hEle: HELE; var Rect: TRect; bRedraw: BOOL = FALSE; nFlags: Integer = adjustLayout_all; nAdjustNo: Cardinal = 0): Integer; stdcall; external XCGUI_DLL;

function XEle_SetRectEx(hEle: HELE; x, y, cx, cy: Integer; bRedraw: BOOL = FALSE; nFlags: Integer = adjustLayout_all; nAdjustNo: Cardinal = 0): Integer; stdcall; external XCGUI_DLL;

function XEle_SetRectLogic(hEle: HELE; var Rect: TRect; bRedraw: BOOL = FALSE; nFlags: Integer = adjustLayout_all; nAdjustNo: Cardinal = 0): Integer; stdcall; external XCGUI_DLL;

procedure XEle_GetRect(hEle: HELE; out Rect: TRect); stdcall; external XCGUI_DLL;

procedure XEle_GetRectLogic(hEle: HELE; out Rect: TRect); stdcall; external XCGUI_DLL;

procedure XEle_GetClientRect(hEle: HELE; out Rect: TRect); stdcall; external XCGUI_DLL;

procedure XEle_GetWndClientRect(hEle: HELE; out Rect: TRect); stdcall; external XCGUI_DLL;

procedure XEle_SetWidth(hEle: HELE; nWidth: Integer); stdcall; external XCGUI_DLL;

procedure XEle_SetHeight(hEle: HELE; nHeight: Integer); stdcall; external XCGUI_DLL;

function XEle_GetWidth(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XEle_GetHeight(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

procedure XEle_RectWndClientToEleClient(hEle: HELE; var Rect: TRect); stdcall; external XCGUI_DLL;

procedure XEle_PointWndClientToEleClient(hEle: HELE; var pPt: TPoint); stdcall; external XCGUI_DLL;

procedure XEle_RectClientToWndClient(hEle: HELE; var Rect: TRect); stdcall; external XCGUI_DLL;

procedure XEle_PointClientToWndClient(hEle: HELE; var pPt: TPoint); stdcall; external XCGUI_DLL;

function XEle_AddChild(hEle: HELE; hChild: HXCGUI): BOOL; stdcall; external XCGUI_DLL;

function XEle_InsertChild(hEle: HELE; hChild: HXCGUI; index: Integer): BOOL; stdcall; external XCGUI_DLL;

procedure XEle_Remove(hEle: HELE); stdcall; external XCGUI_DLL;

function XEle_SetZOrder(hEle: HELE; index: Integer): BOOL; stdcall; external XCGUI_DLL;

function XEle_SetZOrderEx(hEle: HELE; hDestEle: HELE; nType: zorder_): BOOL; stdcall; external XCGUI_DLL;

function XEle_GetZOrder(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

procedure XEle_EnableTopmost(hEle: HELE; bTopmost: BOOL); stdcall; external XCGUI_DLL;

procedure XEle_SetCursor(hEle: HELE; hCursor: HCURSOR); stdcall; external XCGUI_DLL;

function XEle_GetCursor(hEle: HELE): HCURSOR; stdcall; external XCGUI_DLL;

procedure XEle_SetTextColor(hEle: HELE; color: Integer); stdcall; external XCGUI_DLL;

function XEle_GetTextColor(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XEle_GetTextColorEx(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

procedure XEle_SetFocusBorderColor(hEle: HELE; color: Integer); stdcall; external XCGUI_DLL;

function XEle_GetFocusBorderColor(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

procedure XEle_SetFont(hEle: HELE; hFontx: HFONTX); stdcall; external XCGUI_DLL;

function XEle_GetFont(hEle: HELE): HFONTX; stdcall; external XCGUI_DLL;

function XEle_GetFontEx(hEle: HELE): HFONTX; stdcall; external XCGUI_DLL;

procedure XEle_SetAlpha(hEle: HELE; alpha: BYTE); stdcall; external XCGUI_DLL;

function XEle_GetAlpha(hEle: HELE): Byte; stdcall; external XCGUI_DLL;

function XEle_GetChildCount(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

function XEle_GetChildByIndex(hEle: HELE; index: Integer): HXCGUI; stdcall; external XCGUI_DLL;

function XEle_GetChildByID(hEle: HELE; nID: Integer): HXCGUI; stdcall; external XCGUI_DLL;

procedure XEle_SetBorderSize(hEle: HELE; left: Integer; top: Integer; right: Integer; bottom: Integer); stdcall; external XCGUI_DLL;

procedure XEle_GetBorderSize(hEle: HELE; out pBorder: TborderSize_); stdcall; external XCGUI_DLL;

procedure XEle_SetPadding(hEle: HELE; left: Integer; top: Integer; right: Integer; bottom: Integer); stdcall; external XCGUI_DLL;

procedure XEle_GetPadding(hEle: HELE; out pPadding: TpaddingSize_); stdcall; external XCGUI_DLL;

procedure XEle_SetDragBorder(hEle: HELE; nFlags: Integer); stdcall; external XCGUI_DLL;

procedure XEle_SetDragBorderBindEle(hEle: HELE; nFlags: Integer; hBindEle: HELE; nSpace: Integer); stdcall; external XCGUI_DLL;

procedure XEle_SetMinSize(hEle: HELE; nWidth: Integer; nHeight: Integer); stdcall; external XCGUI_DLL;

procedure XEle_SetMaxSize(hEle: HELE; nWidth: Integer; nHeight: Integer); stdcall; external XCGUI_DLL;

procedure XEle_SetLockScroll(hEle: HELE; bHorizon: BOOL; bVertical: BOOL); stdcall; external XCGUI_DLL;

function XEle_HitChildEle(hEle: HELE; var pPt: TPOINT): HELE; stdcall; external XCGUI_DLL;

procedure XEle_SetUserData(hEle: HELE; nData: vint); stdcall; external XCGUI_DLL;

function XEle_GetUserData(hEle: HELE): vint; stdcall; external XCGUI_DLL;

procedure XEle_GetContentSize(hEle: HELE; bHorizon: BOOL; cx: Integer; cy: Integer; out pSize: TSize); stdcall; external XCGUI_DLL;

procedure XEle_SetCapture(hEle: HELE; b: BOOL); stdcall; external XCGUI_DLL;

procedure XEle_Redraw(hEle: HELE; bImmediate: BOOL = False); stdcall; external XCGUI_DLL;

procedure XEle_RedrawRect(hEle: HELE; var Rect: TRect; bImmediate: BOOL = False); stdcall; external XCGUI_DLL;

procedure XEle_Destroy(hEle: HELE); stdcall; external XCGUI_DLL;

procedure XEle_AddBkBorder(hEle: HELE; nState: Integer; color: Integer; width: Integer); stdcall; external XCGUI_DLL;

procedure XEle_AddBkFill(hEle: HELE; nState: Integer; color: Integer); stdcall; external XCGUI_DLL;

procedure XEle_AddBkImage(hEle: HELE; nState: Integer; hImage: HIMAGE); stdcall; external XCGUI_DLL;

function XEle_GetBkInfoCount(hEle: HELE): Integer; stdcall; external XCGUI_DLL;

procedure XEle_ClearBkInfo(hEle: HELE); stdcall; external XCGUI_DLL;
